[FIX] overflow of mat-table to retained 100vh full page app [REMOVED] console logs [ADDED] Sticky header for table [ADDED] Welcome message on login

--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -17,6 +17,7 @@
   box-sizing: border-box;
   margin: 10px;
   border-radius: 5px;
+  min-width: 0;
 }
 button {
   min-width: 240px;
