--- a/src/app/admin-page/employee-records/employee-records.component.scss
+++ b/src/app/admin-page/employee-records/employee-records.component.scss
@@ -1,5 +1,6 @@
 .container {
   height: 100%;
+  min-height: 0;
   display: flex;
   flex-direction: column;
   border-radius: 5px;
@@ -7,17 +8,25 @@
   padding: 20px;
   background-color: #eee;
 }
+
 .actions {
+  flex-shrink: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-block: 10px;
-}
-.table-container {
-  flex-grow: 1;
-  overflow-y: scroll;
+  margin-block: 5px;
 }
 .create-employee-button {
-  height: 55px;
-  padding-right: 5rem;
+  height: 50px;
+}
+
+.table-container {
+  flex-grow: 1;
+  height: 0px;
+  overflow: auto;
+  border-radius: 10px 10px 0 0;
+}
+
+.paginator {
+  flex-shrink: 0;
 }
