--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -13,3 +13,12 @@
   display: flex;
   flex-direction: column;
 }
+
+.greetings {
+  text-align: center;
+  font-size: 2rem;
+  padding: 20px;
+  margin-block: 20px;
+  box-sizing: border-box;
+  font-weight: bolder;
+}
